--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
-
+    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/sprint4-61808.appspot.com/o/ConfirmImg%2FPrivate%20Learning%20Logo.png?alt=media&token=9c0c08e2-9457-4280-bdee-2f1a17241039" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap'); </style>
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
 
-    <title>RappiDuck</title>
+    <title>Atienda</title>
   </head>
   <body>
     <div id="root"></div>
